--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+    font-family: System-ui;
+}
+
+h1 {
+    font-size: 8vh;
+    font-family: System-ui;
+}
