Reto 6 - Propiedades y plantillas

--- a/src/app/mi-perfil/mi-perfil.html
+++ b/src/app/mi-perfil/mi-perfil.html
@@ -1,6 +1,6 @@
 <h1>Mi Perfil</h1>
-<h2>Mi nombre es Juan Perez</h2>
-<h3>Tengo 30 años</h3>
-<h4>Soy Desarrollador de Software</h4>
-<h5>Mi direccion es Av.Amazonas y Rio Coca, Quito, Ecuador</h5>
-<p>Mi telefono es <strong>+593 999 999 999</strong></p>
+<h2>Mi nombre es {{nombre}}</h2>
+<h3>Tengo {{edad}} años</h3>
+<h4>Soy {{ocupacion}}</h4>
+<h5>Mi direccion es {{direccion}}</h5>
+<p>Mi telefono es <strong>{{telefono}}</strong></p>
