Reto 8 - Multiples componentes

--- a/src/app/mi-perfil/mi-perfil.html
+++ b/src/app/mi-perfil/mi-perfil.html
@@ -4,3 +4,6 @@
 <h4>Soy {{ocupacion}}</h4>
 <h5>Mi direccion es {{direccion}}</h5>
 <p>Mi telefono es <strong>{{telefono}}</strong></p>
+<app-cuenta></app-cuenta>
+<app-prestamos></app-prestamos>
+<app-transacciones></app-transacciones>
