--- a/src/app/mi-perfil/mi-perfil.html
+++ b/src/app/mi-perfil/mi-perfil.html
@@ -4,6 +4,8 @@
 <h4>Soy {{ocupacion}}</h4>
 <h5>Mi direccion es {{direccion}}</h5>
 <p>Mi telefono es <strong>{{telefono}}</strong></p>
+<button (click)="cambiarEdad()">Cumplir años</button>
+<button (click)="cambiarDireccion()">Cambiar direccion</button>
 <app-cuenta></app-cuenta>
 <app-prestamos></app-prestamos>
 <app-transacciones></app-transacciones>
