--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,5 @@
 <h1>Krake Dev - Escuela de Programación</h1>
 <h2>Bienvenido, {{ title() }}</h2>
 <p>La mama de la mama</p>
-<mi-perfil></mi-perfil>
+<!--<mi-perfil></mi-perfil>-->
+<app-prestamos></app-prestamos>
