--- a/src/app/prestamos/prestamos.html
+++ b/src/app/prestamos/prestamos.html
@@ -11,12 +11,8 @@
 {{redirigir}} <br>
 <button (click)="cambioRedireccion()">Cambiar redireccion</button>
 @for(prestamo of prestamosList; track prestamo.id){
-    <ul>
-        <li>Monto del prestamo: {{prestamo.monto}}</li>
-        @if(prestamo.estado == 'Aprobado'){
-            <li style="color:green">{{prestamo.estado}}</li>
-        } @else {
-            <li style="color:red">{{prestamo.estado}}</li>
-        }
-    </ul>
+<ul>
+    <li>Monto del prestamo: {{prestamo.monto}}</li>
+    <li [style.color]="prestamo.estado == 'Aprobado' ? 'green' : 'red'">{{prestamo.estado}}</li>
+</ul>
 }
